feat: add initial site structure including home and about pages, footer component, and site constants.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,54 +10,33 @@ import Layout from '../layouts/BlogPost.astro';
 	heroImage={AboutHeroImage}
 >
 	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-		labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo
-		viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-		adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus
-		et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus
-		vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-		sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
+		Halo lagi! Saya Rachmad Hartono.
+	</p>
+	<p>
+		Jika halaman depan adalah "apa yang saya kerjakan", halaman ini adalah "siapa saya" dan "mengapa saya melakukan semua ini".
 	</p>
 
+	<h3>Perjalanan Saya</h3>
 	<p>
-		Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non
-		tellus. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non
-		blandit massa. Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-		porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-		massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius morbi enim nunc.
-		Bibendum neque egestas congue quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-		bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et pharetra pharetra
-		massa massa ultricies mi.
+		Saya memulai karier di dunia teknologi karena ketertarikan mendalam pada bagaimana data menggerakkan dunia modern. Sebagai <strong>Database Administrator (DBA)</strong>, saya belajar bahwa ketelitian dan integritas adalah segalanya. Satu kesalahan kecil bisa berdampak fatal. Filosofi ini saya bawa saat menjadi <strong>Software Engineer</strong>; membangun sistem yang tidak hanya jalan, tapi juga tangguh dan efisien.
 	</p>
 
+	<h3>Sisi Lain: Bisnis & Properti</h3>
 	<p>
-		Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque. Diam sit amet nisl
-		suscipit. Lacus viverra vitae congue eu consequat ac felis donec. Egestas integer eget aliquet
-		nibh praesent tristique magna sit amet. Eget magna fermentum iaculis eu non diam. In vitae
-		turpis massa sed elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-		dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra. Posuere ac ut consequat
-		semper viverra nam. Laoreet suspendisse interdum consectetur libero id faucibus. Diam phasellus
-		vestibulum lorem sed risus ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-		facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed risus pretium quam
-		vulputate. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Fringilla
-		urna porttitor rhoncus dolor purus non. Amet dictum sit amet justo donec enim.
+		Dunia teknologi mengajarkan saya logika, tapi dunia bisnis mengajarkan saya empati dan strategi. Saya terjun ke dunia properti di Jogja bukan sekadar untuk investasi, tapi karena saya suka melihat potensi dari sebuah lahan atau bangunan. Ada seni tersendiri dalam menemukan "hidden gem" di sudut-sudut Jogja.
 	</p>
 
+	<h3>Tentang Blog Ini</h3>
 	<p>
-		Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac ut consequat semper
-		viverra. Tellus mauris a diam maecenas sed enim ut sem viverra. Venenatis urna cursus eget nunc
-		scelerisque viverra mauris in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur
-		gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-		pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim sit amet. Ut enim
-		blandit volutpat maecenas volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id
-		cursus metus aliquam eleifend mi.
+		Blog ini adalah jurnal digital saya. Anda akan menemukan campuran topik yang mungkin terlihat acak, tapi sebenarnya saling terhubung:
 	</p>
+	<ul>
+		<li><strong>Catatan Teknis</strong>: Solusi dari masalah coding atau database yang pernah saya hadapi.</li>
+		<li><strong>Review Jujur</strong>: Entah itu gadget, tools, rumah, atau makanan enak di Jogja (rekomendasi Mbak Raisa biasanya tidak pernah salah!).</li>
+		<li><strong>Opini Bisnis</strong>: Pengamatan saya tentang tren UMKM dan industri teknologi.</li>
+	</ul>
 
 	<p>
-		Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus imperdiet. Id porta
-		nibh venenatis cras sed felis eget velit. Ipsum a arcu cursus vitae. Facilisis magna etiam
-		tempor orci eu lobortis elementum. Tincidunt dui ut ornare lectus sit. Quisque non tellus orci
-		ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar
-		proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
+		Terima kasih sudah mampir. Semoga tulisan-tulisan di sini bisa memberikan manfaat, inspirasi, atau setidaknya hiburan buat Anda.
 	</p>
 </Layout>
